# python-package-template

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.circleci/: config.yml
src/mypackagename/: __init__.py
tests/unit/: test_example.py
