[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "my_package_name"
author = "Jerry Seinfeld"
author-email = "jseinfeld@narrativescience.com"
home-page = "https://github.com/NarrativeScience/my-package-name"
license = "BSD-3-Clause"
description-file = "README.md"
requires = [
    # Requirements here, e.g. "backoff>=1.8.0,<2",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.6,<4"
keywords = "comma,separated,keywords"

[tool.flit.sdist]
include = ["LICENSE.md"]
exclude = ["tests/"]
